// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/setup/hook-script sync should amend hook script if it did exist beforehand 1`] = `
"#/bin/bash -e
echo \\"yey!\\";


GIT_PARAMS=\\"$*\\" /Users/m48692/projects/gint/bin/bootstrap commit-msg
"
`;

exports[`lib/setup/hook-script sync should create hook script if it did not exist beforehand 1`] = `
"#!/bin/sh

GIT_PARAMS=\\"$*\\" /Users/m48692/projects/gint/bin/bootstrap commit-msg
"
`;

exports[`lib/setup/hook-script sync should keep only one instance of snippet in hook file 1`] = `
"#!/bin/sh

GIT_PARAMS=\\"$*\\" /Users/m48692/projects/gint/bin/bootstrap commit-msg
"
`;

exports[`lib/setup/hook-script sync should replace old hook format with new one 1`] = `
"#!/bin/sh

GIT_PARAMS=\\"$*\\" /Users/m48692/projects/gint/bin/bootstrap commit-msg
"
`;

exports[`lib/setup/hook-script unsync should remove hook snippet is hook script shared/edited 1`] = `
"#/bin/bash -e
echo \\"yey!\\";
"
`;
